--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <script src="../js/table_generator.js" type="module" ></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/table.css">
+    <script src="js/table_generator.js" type="module" ></script>
     <title>Assignment</title>
 </head>
 <body>
